--- a/package.json
+++ b/package.json
@@ -36,6 +36,10 @@
     "watchify": "^3.4.0"
   },
   "dependencies": {
+    "angular": "^1.5.8",
+    "angular-ui-router": "^0.3.1",
+    "angularfire": "^2.0.2",
+    "firebase": "^3.3.0",
     "font-awesome": "^4.4.0",
     "jquery": "^2.1.4",
     "moment": "^2.10.6",
